--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "redux-first-router": "^1.9.15",
     "redux-first-router-link": "^1.1.4",
     "reselect": "^3.0.1",
+    "sass-burger": "^1.3.1",
     "serialize-javascript": "^1.4.0",
     "transition-group": "^0.0.2",
     "webpack-flush-chunks": "^1.1.22"
