mobile nav drawer added with slide in/out animation when burger menu clicked

--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "server/index.js",
   "author": "Derrick Beining <derrick.beining@gmail.com>",
   "license": "MIT",
+  "engines": {
+    "node": ">=8.9.3"
+  },
   "scripts": {
     "start": "npm run clean && cross-env NODE_ENV=development babel-watch server/index.js",
     "start:prod": "npm run build && npm run serve",
