--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Derrick Beining <derrick.beining@gmail.com>",
   "license": "MIT",
   "engines": {
-    "node": ">=8.9.3"
+    "node": ">=8.0.0"
   },
   "scripts": {
     "start": "npm run clean && cross-env NODE_ENV=development babel-watch server/index.js",
@@ -32,6 +32,7 @@
     "normalize.css": "^7.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-event-listener": "^0.5.2",
     "react-redux": "^5.0.5",
     "react-universal-component": "^2.5.0",
     "redux": "^3.7.0",
