--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "format": "prettier --single-quote --semi=false --write '{src,server,webpack}/**/*.js' && npm run lint"
   },
   "dependencies": {
-    "animatewithsass": "^3.2.1",
+    "angled-edges": "^2.0.0",
     "babel-polyfill": "^6.23.0",
     "cookie-parser": "^1.4.3",
     "express": "^4.15.2",
@@ -34,14 +34,15 @@
     "react-dom": "^16.2.0",
     "react-event-listener": "^0.5.2",
     "react-redux": "^5.0.5",
-    "react-universal-component": "^2.5.0",
+    "react-universal-component": "2.8.0",
     "redux": "^3.7.0",
     "redux-devtools-extension": "^2.13.2",
-    "redux-first-router": "^1.9.15",
+    "redux-first-router": "^0.0.20-next",
     "redux-first-router-link": "^1.1.4",
     "reselect": "^3.0.1",
     "sass-burger": "^1.3.1",
     "serialize-javascript": "^1.4.0",
+    "spinthatshit": "^1.0.4",
     "transition-group": "^0.0.2",
     "webpack-flush-chunks": "^1.1.22"
   },
