--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     "presets": [
       "env",
       "react",
-      "stage-2"
+      "stage-2",
+      "flow"
     ],
     "plugins": [
-      "universal-import"
+      "universal-import",
+      "transform-class-properties",
+      "transform-flow-strip-types"
     ],
     "env": {
       "development": {
@@ -45,8 +48,10 @@
   ],
   "dependencies": {
     "angled-edges": "^2.0.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-polyfill": "^6.23.0",
     "cookie-parser": "^1.4.3",
+    "eslint-loader": "^1.9.0",
     "express": "^4.15.2",
     "fetch-everywhere": "^1.0.5",
     "history": "^4.6.3",
@@ -54,6 +59,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-event-listener": "^0.5.2",
+    "react-portal": "^4.1.2",
     "react-redux": "^5.0.5",
     "react-redux-form": "^1.16.3",
     "react-universal-component": "2.8.0",
@@ -72,15 +78,17 @@
   "devDependencies": {
     "autodll-webpack-plugin": "^0.3.2",
     "autoprefixer": "^7.2.3",
-    "babel-cli": "^6.24.0",
-    "babel-core": "^6.24.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.1",
-    "babel-loader": "^7.1.1",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-plugin-universal-import": "^1.2.2",
     "babel-preset-env": "^1.6.0",
-    "babel-preset-react": "^6.23.0",
+    "babel-preset-flow": "^6.23.0",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.22.0",
-    "babel-watch": "^2.0.6",
+    "babel-watch": "^2.0.7",
     "bluebird": "^3.5.1",
     "commitizen": "^2.9.6",
     "cross-env": "^5.0.1",
@@ -89,12 +97,13 @@
     "eslint": "^4.9.0",
     "eslint-config-airbnb": "^16.0.0",
     "eslint-import-resolver-webpack": "^0.8.3",
-    "eslint-plugin-flowtype": "^2.32.1",
+    "eslint-plugin-flowtype": "^2.40.1",
+    "eslint-plugin-flowtype-errors": "^3.3.6",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
     "extract-css-chunks-webpack-plugin": "^2.0.15",
-    "flow-bin": "^0.57.2",
+    "flow-bin": "^0.61.0",
     "husky": "^0.14.3",
     "jest": "^21.2.1",
     "lint-staged": "^4.2.3",
