--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "prettier": "^1.4.4",
     "react-hot-loader": "^3.0.0",
     "rimraf": "^2.6.1",
+    "sass-lint": "^1.12.1",
     "sass-loader": "^6.0.6",
     "stats-webpack-plugin": "^0.6.1",
     "style-loader": "^0.19.0",
